--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ logo: # filename of a logo image that has been placed into your images directory
 
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
-  name:Kemil Herath
+  name: Kemil Herath
   avatar: bio-photo.jpg
   bio: "A brief description of yourself."
   email: herath@unlv.nevada.edu
@@ -42,8 +42,8 @@ owner:
 
 # The following adjust the accents for your site. If you would like to further edit colors, fonts, font sizes, etc.
 # you may do so in _sass/variables.scss
-highlight-color: '3A859E'
-lowlight-color: 'A7B1B5'
+highlight-color: '#3A859E'
+lowlight-color: '#A7B1B5'
 
   # NOTE: If you would like your site to be licensed under a creative commons license, uncomment the 'yes' next to the type of license you wish to use.
 creative-commons:
