--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo: # filename of a logo image that has been placed into your images directory
 owner:
   name: Kemil Herath
   avatar: bio-photo.jpg
-  bio: "A brief description of yourself."
+  bio: "I'm a current UNLV student pursuing a Master's Degree in Management Information Systems (MIS). "
   email: herath@unlv.nevada.edu
   # Do not include the @ symbol in your Twitter username
   twitter: #username
